# matrix-calculator

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.save
.github/workflows/: ci.yml
html/: annotated.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  main_8cpp.html  matrix_8cpp.html  matrix_8cpp__incl.map  matrix_8cpp__incl.md5  matrix_8h.html  matrix_8h__dep__incl.map  matrix_8h__dep__incl.md5  matrix_8h_source.html  structMatrix-members.html  structMatrix.html
html/search/: all_0.js  all_3.js  all_4.js  functions_0.js  functions_1.js  functions_2.js
include/: matrix.h
src/: main.cpp  matrix.cpp
tests/: CMakeLists.txt  test_matrix.cpp
